--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <!-- SplashActivity를 앱 시작 화면으로 설정 -->
         <activity
-            android:name="com.example.bookapp.SplashActivity"
+            android:name="com.example.bookapp.tab1.SplashActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -31,7 +31,7 @@
         </activity>
 
         <activity
-            android:name="com.example.bookapp.MainActivity"
+            android:name="com.example.bookapp.tab1.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.BookApp">
